crates/bingo-surface-tui/src/screens/snapshots/bingo_surface_tui__screens__windows__form_crowded.snap
---
source: crates/bingo-surface-tui/src/screens/windows.rs
assertion_line: 15
expression: screen.clone()
---
"────────────────────────────────────────────────────────────────────────────────"
"←  ☐ Auth method  ☐ Library  ☐ Targets  ✔ Submit  →                             "
"  …                                                                             "
"  11. option 11                                                                 "
"  12. option 12                                                                 "
"  13. option 13                                                                 "
"  14. option 14                                                                 "
"  15. option 15                                                                 "
"  16. option 16                                                                 "
"  17. option 17                                                                 "
"  18. option 18                                                                 "
"  19. option 19                                                                 "
"  20. option 20                                                                 "
"  21. option 21                                                                 "
"  22. option 22                                                                 "
"  23. option 23                                                                 "
"❯ 24. option 24                                                                 "
"  25. Type something.                                                           "
"────────────────────────────────────────────────────────────────────────────────"
"  26. Chat about this                                                           "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
