crates/bingo-surface-tui/src/screens/snapshots/bingo_surface_tui__screens__windows__panel_end.snap
---
source: crates/bingo-surface-tui/src/screens/windows.rs
expression: screen.clone()
---
"  …                                                                             "
"  id  status       subject                                                      "
"  ───────────────────────────────                                               "
"   1  pending      write the plan                                               "
"   2  in_progress  ship it                                                      "
"   3  done         read the diff                                                "
"                                                                                "
"  bingo.plugin-3 · board                                                        "
"  id  status       subject                                                      "
"  ───────────────────────────────                                               "
"   1  pending      write the plan                                               "
"   2  in_progress  ship it                                                      "
"   3  done         read the diff                                                "
"                                                                                "
"❯ bingo.plugin-4 · board                                                        "
"  id  status       subject                                                      "
"  ───────────────────────────────                                               "
"   1  pending      write the plan                                               "
"   2  in_progress  ship it                                                      "
"   3  done         read the diff                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
