crates/bingo-surface-tui/src/screens/snapshots/bingo_surface_tui__screens__windows__resume_end.snap
---
source: crates/bingo-surface-tui/src/screens/windows.rs
expression: screen.clone()
---
"Resume                                                                          "
"  …                                                                             "
"  7. session 16 · just now                                                      "
"  8. session 17 · just now                                                      "
"  9. session 18 · just now                                                      "
"  10. session 19 · just now                                                     "
"  11. session 20 · just now                                                     "
"  12. session 21 · just now                                                     "
"  13. session 22 · just now                                                     "
"  14. session 23 · just now                                                     "
"  15. session 24 · just now                                                     "
"  16. session 25 · just now                                                     "
"  17. session 26 · just now                                                     "
"  18. session 27 · just now                                                     "
"  19. session 28 · just now                                                     "
"  20. session 29 · just now                                                     "
"  21. session 30 · just now                                                     "
"  22. session 31 · just now                                                     "
"  23. session 32 · just now                                                     "
"❯ 24. session 33 · just now                                                     "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
