crates/bingo-surface-tui/src/screens/snapshots/bingo_surface_tui__screens__windows__rewind_middle.snap
---
source: crates/bingo-surface-tui/src/screens/windows.rs
expression: screen.clone()
---
"                                                                                "
"> turn 06: do the thing                                                         "
"                                                                                "
"> turn 07: do the thing                                                         "
"                                                                                "
"> turn 08: do the thing                                                         "
"                                                                                "
"> turn 09: do the thing                                                         "
"                                                                                "
"> turn 10: do the thing                                                         "
"                                                                                "
"Rewind to                                                                       "
"  …                                                                             "
"  turn 11: do the thing · 1 item                                                "
"  turn 10: do the thing · 1 item                                                "
"  turn 09: do the thing · 1 item                                                "
"❯ turn 08: do the thing · 1 item                                                "
"  turn 07: do the thing · 1 item                                                "
"  turn 06: do the thing · 1 item                                                "
"  …                                                                             "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                           fake-1"
